Add test of BioService with static mock